--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="lista.css">
 </head>
+
 <body>
-    
+    <div class="grid-container">
+        <div class="grid-item ">
+
+            <div class="iconos_izqu contenedor">
+                <img src="/img/twitter-brands.svg" alt="">
+                <img src="/img/house-user-solid.svg" alt="">
+                <img src="/img/hashtag-solid.svg" alt="">
+                <img src="/img/bell-regular.svg" alt="">
+                <img src="/img/envelope-solid.svg" alt="">
+                <img src="/img/bookmark-solid.svg" alt="">
+                <img src="/img/list-solid.svg" alt="">
+                <img src="/img/user-solid.svg" alt="">
+                <img src="/img/square-caret-down-solid.svg" alt="">
+
+            </div>
+        </div>
+
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+    </div>
 </body>
+
 </html>
