--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             </div>
         </div>
 
-        <div class="grid-item">2</div>
+        <div class="grid-item">
+
+
+            
+        </div>
         <div class="grid-item">3</div>
     </div>
 </body>
