--- a/index.html
+++ b/index.html
@@ -28,9 +28,24 @@
         </div>
 
         <div class="grid-item">
+            <div class="titulo_intermedio">
+                <h1>Home</h1>
+            </div>
 
 
-            
+            <div>
+                <!--Colocar img-->
+                <div class="Comentario">
+                    <img src="img/perfil.png" alt="">
+                <!-- nombre -->
+                <p>Alvaro Quispe</p>
+              
+                </div>
+                  <!-- Comentario -->
+                  <p>Vendo carro a 2500 de 0kilometros </p>
+            </div>
+
+
         </div>
         <div class="grid-item">3</div>
     </div>
